优化 Dept 目录下代码

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">SxMobileOA</string>
-    <string name="title_activity_department">DepartmentAct</string>
+    <string name="app_name">陕西移动办公</string>
 </resources>
